@@ -1,5 +1,7 @@
 * Version 0.1.19
 
+- Remove ~starhugger-hexify-request-data~
+
 - Support ~starhugger-api-token~ being a function.
 
 * Version 0.1.18
